fixed filter dropdown on mobile and added quality of life improvements to creating/updating properties

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -940,7 +940,12 @@ form.login input.form-control {
   overflow: hidden;
   -webkit-transition: height 0.3s ease-out;
   transition: height 0.3s ease-out;
-  height: auto;
+}
+
+@media (min-width: 768px) {
+  .listings-container .col-filter {
+    height: auto !important;
+  }
 }
 
 .listings-container .listings-single {
