--- a/resources/sass/admin.scss
+++ b/resources/sass/admin.scss
@@ -121,6 +121,10 @@ ul.sidebar {
  }
 }
 
+.btn-view-property {
+  margin-bottom: 15px;
+}
+
 form {
   .form-group {
     margin-bottom: 15px;
