--- a/resources/sass/layout/listings.scss
+++ b/resources/sass/layout/listings.scss
@@ -32,7 +32,10 @@
   .col-filter {
     overflow:hidden;
     transition:height 0.3s ease-out;
-    height:auto;
+
+    @include tablet {
+      height: auto !important;
+    }
   }
 
   .listings-single {
